--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
   <!-- Insert comments here -->
   <div class="comments">
     <script src="https://utteranc.es/client.js"
-            repo="yourusername/your-comments-repo"
+            repo="ashterism/ashterism"
             issue-term="pathname"
             theme="github-light"
             crossorigin="anonymous"
