--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,19 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Begin SEO -->
   {%- seo -%}
+  <!-- End SEO -->
+  
   <!-- Favicon Link -->
-  <link rel="icon" href="{{ '/ashterism/favicon.ico' | relative_url }}" type="image/x-icon">
+<!--  <link rel="icon" href="{{ '/ashterism/favicon.ico' | relative_url }}" type="image/x-icon">
+ --> 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
   <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  
   {%- feed_meta -%}
+  
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
