--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
   <!-- End SEO -->
   
   <!-- Favicon Link -->
-  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+  <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
