--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,9 +10,8 @@
   <!-- Favicon Link -->
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@latest/css/all.min.css">
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" type="text/css" href="/css/override.css">
   
   {%- feed_meta -%}
   
