--- a/css/override.css
+++ b/css/override.css
@@ -92,6 +92,18 @@ hr {
   margin: 0;
 }
 
+/* Image Grid for Blog Posts */
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 10px;
+  justify-items: center;
+}
+.image-grid img {
+  width: 100%;
+  max-width: 200px;
+}
+
 @media print {
   .no-print {
     display: none !important;
