--- a/css/override.css
+++ b/css/override.css
@@ -92,6 +92,7 @@ hr {
   margin: 0;
 }
 
+/* IMAGE AND VIDEO */
 /* Image Grid for Blog Posts */
 .image-grid {
   display: grid;
@@ -107,6 +108,21 @@ hr {
 .image-grid figure {
   margin: 0;
   text-align: left;
+}
+
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  margin: 1rem 0;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* Typography */
