--- a/css/override.css
+++ b/css/override.css
@@ -90,7 +90,7 @@ hr {
 }
 
 /* IMAGE AND VIDEO */
-/* Image Grid for Blog Posts */
+/* Image Grid for blog posts */
 .image-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
@@ -119,8 +119,10 @@ hr {
 .video-wrapper iframe {
   position: absolute;
   top: 0; left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  border: 0;
+  display: block;
 }
 
 /* Typography */
