--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Ash Bladon">
   <meta name="robots" content="index, follow">
 
-  meta property="og:title" content="Ashterism - Musings by Ash">
+  <meta property="og:title" content="Ashterism - Musings by Ash">
   <meta property="og:description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like.">
   <meta property="og:url" content="https://ashterism.com/">
   <meta property="og:type" content="website">
