--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,13 +2,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like." />
-  <meta name="author" content="Ash Bladon">
+  <meta name="description" content="A free resource for creating and implementing a sustainability strategy" />
+  <meta name="author" content="Sustainamo">
   <meta name="robots" content="index, follow">
 
-  <meta property="og:title" content="Ashterism - Musings by Ash">
-  <meta property="og:description" content="A personal blog on adventures in astrophotography, sustainability, hiking and the like.">
-  <meta property="og:url" content="https://ashterism.com/">
+  <meta property="og:title" content="Sustainamo - being Sustainable">
+  <meta property="og:description" content="A free resource for creating and implementing a sustainability strategy">
+  <meta property="og:url" content="https://sustainamo.com/">
   <meta property="og:type" content="website">
 
   <!-- Begin SEO -->
