--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,7 @@
   <!-- Favicon Link -->
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <link rel="stylesheet" type="text/css" href="/css/override.css">
+  <link rel="stylesheet" href="{{ "/css/override.css" | relative_url }}">
   
   {%- feed_meta -%}
   
