--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,8 @@
   <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
   <link rel="stylesheet" href="{{ "/css/override.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+
   
   {%- feed_meta -%}
   
