--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,202 +1,3 @@
----
----
-
-@import "minima";
-
-
-// customisations below
-
-hr {
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-
-/* Post navigation links */
-.post_navi {
-  display: flex;
-}
-
-.post_navi-label {
-  font-size: 0.8em;
-  opacity: 0.5;
-}
-
-.post_navi .post_navi-item {
-  padding: 0 2.2em;
-  width: 50%;
-  position: relative;
-  color: inherit !important;
-}
-
-.post_navi .nav_prev {
-  text-align: left;
-}
-
-.post_navi .nav_next {
-  text-align: right;
-}
-
-.post_navi .nav_prev .post_navi-arrow {
-  left: 0;
-}
-
-.post_navi .nav_next .post_navi-arrow {
-  right: 0;
-}
-
-.post_navi .post_navi-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 2.5em;
-  opacity: 0.3;
-}
-
-/* HighlightJS overrides */
-.hljs {
-  max-height: {{site.code_block_max_height | default: "500px"}};
-}
-
-/* Copy code button */
-.copy-code-button {
-  color: #272822;
-  background-color: #FFF;
-  border-color: #272822;
-  border: 2px solid;
-  border-radius: 3px 3px 0px 0px;
-
-  /* right-align */
-  display: block;
-  margin-left: auto;
-  margin-right: 0;
-
-  margin-bottom: -2px;
-  padding: 3px 8px;
-  font-size: 0.8em;
-}
-
-.copy-code-button:hover {
-  cursor: pointer;
-  background-color: #F2F2F2;
-}
-
-.copy-code-button:focus {
-  /* Avoid an ugly focus outline on click in Chrome,
-     but darken the button for accessibility.
-     See https://stackoverflow.com/a/25298082/1481479 */
-  background-color: #E6E6E6;
-  outline: 0;
-}
-
-.copy-code-button:active {
-  background-color: #D9D9D9;
-}
-
-.highlight pre {
-  /* Avoid pushing up the copy buttons. */
-  margin: 0;
-}
-
-/* IMAGE AND VIDEO */
-/* Image Grid for blog posts */
-.image-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 10px;
-/*  justify-items: center; commented out as stopping images stretching and messing up alignment...
-  ... where difference sized images in the same post */
-}
-.image-grid img {
-  width: 100%;
-  max-width: 200px;
-}
-
-.image-grid figure {
-  margin: 0;
-  text-align: left;
-}
-
-.video-wrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  height: 0;
-  overflow: hidden;
-  margin: 1rem 0;
-  width: 100%;
-}
-
-.video-wrapper iframe {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100% !important;
-  height: 100% !important;
-  border: 0;
-  display: block;
-}
-
-/* RESPONSIVE TABLE */
-.responsive-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 1em;
-  font-size: 0.95em;
-}
-
-.responsive-table th,
-.responsive-table td {
-  border: 1px solid #ddd;
-  padding: 0.6em 0.8em;
-  text-align: left;
-}
-
-@media screen and (max-width: 600px) {
-  .responsive-table thead {
-    display: none;
-  }
-
-  .responsive-table tr {
-    display: block;
-    margin-bottom: 1em;
-    border: 1px solid #ddd;
-    padding: 0.5em;
-  }
-
-  .responsive-table td {
-    display: block;
-    padding-left: 50%;
-    position: relative;
-    text-align: right;
-    border: none;
-    border-bottom: 1px solid #eee;
-  }
-
-  .responsive-table td::before {
-    content: attr(data-label);
-    position: absolute;
-    left: 0.8em;
-    top: 0.6em;
-    font-weight: bold;
-    text-align: left;
-  }
-
-  .responsive-table td[colspan]::before {
-  content: attr(data-label);
-  }
-  
-}
-
-/* Centering 2nd and 3rd columns */
-.centre-ticks th:nth-child(2),
-.centre-ticks th:nth-child(3),
-.centre-ticks td:nth-child(2),
-.centre-ticks td:nth-child(3),
-.centre-ticks td[colspan="2"] {
-  text-align: center;
-}
-
-
-/* END OF RESPONSIVE TABLE */
-
 /* COMPONENTS */
 .phase-blocks {
   display: flex;
@@ -207,56 +8,44 @@ hr {
   justify-content: space-between;
 }
 
-.phase-block {
-  flex: 1 1 28%;
+/* Make entire block clickable */
+.phase-blocks a.phase-block {
+  text-decoration: none;
+  color: inherit;
+  display: flex;
+  flex-direction: column;
   padding: 1.5rem;
+  flex: 1 1 28%;
   border-radius: 8px;
   background: #e6f2ed;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease;
 }
 
-.phase-block:hover {
+.phase-blocks a.phase-block:hover {
   transform: translateY(-5px);
 }
 
+/* Optional: reset link-specific styles inside blocks */
+.phase-blocks a.phase-block h2,
+.phase-blocks a.phase-block p {
+  color: #333;
+}
+
 /* Individual background shades */
-.phase-blocks.green .phase-block:nth-child(1) {
+.phase-blocks.green a.phase-block:nth-child(1) {
   background-color: #e6f2ed;
 }
-.phase-blocks.green .phase-block:nth-child(2) {
+.phase-blocks.green a.phase-block:nth-child(2) {
   background-color: #d0ebdf;
 }
-.phase-blocks.green .phase-block:nth-child(3) {
+.phase-blocks.green a.phase-block:nth-child(3) {
   background-color: #bae1d1;
 }
 
 @media screen and (max-width: 768px) {
-  .phase-block {
+  .phase-blocks a.phase-block {
     flex: 1 1 100%;
   }
 }
-
-
-
 /* END OF COMPONENTS */
-
-/* Typography */
-h1 {
-  font-size: 1.8em;
-}
-
-@media print {
-  .no-print {
-    display: none !important;
-  }
-}
-
-/* Overall column width */
-
-.wrapper {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
-
