--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,4 +1,190 @@
-/* COMPONENTS */
+---
+---
+
+@import "minima";
+
+// customisations below
+
+hr {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+/* Post navigation links */
+.post_navi {
+  display: flex;
+}
+
+.post_navi-label {
+  font-size: 0.8em;
+  opacity: 0.5;
+}
+
+.post_navi .post_navi-item {
+  padding: 0 2.2em;
+  width: 50%;
+  position: relative;
+  color: inherit !important;
+}
+
+.post_navi .nav_prev {
+  text-align: left;
+}
+
+.post_navi .nav_next {
+  text-align: right;
+}
+
+.post_navi .nav_prev .post_navi-arrow {
+  left: 0;
+}
+
+.post_navi .nav_next .post_navi-arrow {
+  right: 0;
+}
+
+.post_navi .post_navi-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2.5em;
+  opacity: 0.3;
+}
+
+/* HighlightJS overrides */
+.hljs {
+  max-height: {{site.code_block_max_height | default: "500px"}};
+}
+
+/* Copy code button */
+.copy-code-button {
+  color: #272822;
+  background-color: #FFF;
+  border-color: #272822;
+  border: 2px solid;
+  border-radius: 3px 3px 0px 0px;
+
+  display: block;
+  margin-left: auto;
+  margin-right: 0;
+
+  margin-bottom: -2px;
+  padding: 3px 8px;
+  font-size: 0.8em;
+}
+
+.copy-code-button:hover {
+  cursor: pointer;
+  background-color: #F2F2F2;
+}
+
+.copy-code-button:focus {
+  background-color: #E6E6E6;
+  outline: 0;
+}
+
+.copy-code-button:active {
+  background-color: #D9D9D9;
+}
+
+.highlight pre {
+  margin: 0;
+}
+
+/* IMAGE AND VIDEO */
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 10px;
+}
+.image-grid img {
+  width: 100%;
+  max-width: 200px;
+}
+
+.image-grid figure {
+  margin: 0;
+  text-align: left;
+}
+
+.video-wrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  margin: 1rem 0;
+  width: 100%;
+}
+
+.video-wrapper iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100% !important;
+  height: 100% !important;
+  border: 0;
+  display: block;
+}
+
+/* RESPONSIVE TABLE */
+.responsive-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 1em;
+  font-size: 0.95em;
+}
+
+.responsive-table th,
+.responsive-table td {
+  border: 1px solid #ddd;
+  padding: 0.6em 0.8em;
+  text-align: left;
+}
+
+@media screen and (max-width: 600px) {
+  .responsive-table thead {
+    display: none;
+  }
+
+  .responsive-table tr {
+    display: block;
+    margin-bottom: 1em;
+    border: 1px solid #ddd;
+    padding: 0.5em;
+  }
+
+  .responsive-table td {
+    display: block;
+    padding-left: 50%;
+    position: relative;
+    text-align: right;
+    border: none;
+    border-bottom: 1px solid #eee;
+  }
+
+  .responsive-table td::before {
+    content: attr(data-label);
+    position: absolute;
+    left: 0.8em;
+    top: 0.6em;
+    font-weight: bold;
+    text-align: left;
+  }
+
+  .responsive-table td[colspan]::before {
+    content: attr(data-label);
+  }
+}
+
+/* Centering 2nd and 3rd columns */
+.centre-ticks th:nth-child(2),
+.centre-ticks th:nth-child(3),
+.centre-ticks td:nth-child(2),
+.centre-ticks td:nth-child(3),
+.centre-ticks td[colspan="2"] {
+  text-align: center;
+}
+
+/* COMPONENTS: PHASE BLOCKS */
 .phase-blocks {
   display: flex;
   flex-wrap: wrap;
@@ -26,7 +212,6 @@
   transform: translateY(-5px);
 }
 
-/* Optional: reset link-specific styles inside blocks */
 .phase-blocks a.phase-block h2,
 .phase-blocks a.phase-block p {
   color: #333;
@@ -49,3 +234,21 @@
   }
 }
 /* END OF COMPONENTS */
+
+/* Typography */
+h1 {
+  font-size: 1.8em;
+}
+
+@media print {
+  .no-print {
+    display: none !important;
+  }
+}
+
+/* Overall column width */
+.wrapper {
+  max-width: 1100px;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
