--- a/assets/css/_blocks.scss
+++ b/assets/css/_blocks.scss
@@ -61,6 +61,7 @@
 /* OUTLINED STYLE */
 .phase-blocks.outlined a.phase-block {
   background-color: #fff;
+  font-size: 1.3rem;
   border: 2px solid;
   box-shadow: none;
 }
