--- a/assets/css/_blocks.scss
+++ b/assets/css/_blocks.scss
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
-  flex: 1 1 calc(32% -1rem);
+  flex: 1 1 calc(32% - 1rem);
   border-radius: 8px;
   transition: transform 0.2s ease;
 }
