--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,25 +1,27 @@
 <header class="site-header" role="banner">
+
   <div class="wrapper">
-    <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title }}</a>
+    <a class="site-title" rel="author" href="{{ '/' | relative_url }}">{{ site.title | escape }}</a>
 
     <nav class="site-nav">
       <input type="checkbox" id="nav-trigger" class="nav-trigger" />
       <label for="nav-trigger">
         <span class="menu-icon">
           <svg viewBox="0 0 18 15" width="18px" height="15px">
-            <path fill="#333" d="M0 0h18v3H0zM0 6h18v3H0zM0 12h18v3H0z"/>
+            <path fill="#424242"
+                  d="M1,1 L17,1 L17,3 L1,3 Z
+                     M1,7 L17,7 L17,9 L1,9 Z
+                     M1,13 L17,13 L17,15 L1,15 Z"/>
           </svg>
         </span>
       </label>
 
       <div class="trigger">
-        <ul>
-          {% for page in site.pages %}
-            {% if page.inMenu %}
-              <li><a href="{{ page.url | relative_url }}">{{ page.title }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
+        {%- for page in site.pages -%}
+          {%- if page.nav == true -%}
+            <a class="page-link" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
+          {%- endif -%}
+        {%- endfor -%}
       </div>
     </nav>
   </div>
