--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -53,46 +53,6 @@ hr {
   opacity: 0.3;
 }
 
-/* HighlightJS overrides */
-.hljs {
-  max-height: {{site.code_block_max_height | default: "500px"}};
-}
-
-/* Copy code button */
-.copy-code-button {
-  color: #272822;
-  background-color: #FFF;
-  border-color: #272822;
-  border: 2px solid;
-  border-radius: 3px 3px 0px 0px;
-
-  display: block;
-  margin-left: auto;
-  margin-right: 0;
-
-  margin-bottom: -2px;
-  padding: 3px 8px;
-  font-size: 0.8em;
-}
-
-.copy-code-button:hover {
-  cursor: pointer;
-  background-color: #F2F2F2;
-}
-
-.copy-code-button:focus {
-  background-color: #E6E6E6;
-  outline: 0;
-}
-
-.copy-code-button:active {
-  background-color: #D9D9D9;
-}
-
-.highlight pre {
-  margin: 0;
-}
-
 /* IMAGE AND VIDEO */
 .image-grid {
   display: grid;
@@ -205,31 +165,40 @@ h1 {
   padding: 0 1.5rem;
 }
 
-/* Nav menu stuff */
+/* ** NAVIGATION MENU ** */
 
-/* Force burger menu to always show */
+/* By default, show nav links (desktop) */
 .site-nav .trigger {
+  display: flex;
+  gap: 1rem;
+}
+
+/* Hide burger checkbox and icon by default */
+.site-nav .nav-trigger,
+.site-nav label {
   display: none;
 }
 
-.nav-trigger:checked + label + .trigger {
-  display: block;
-}
-
-.site-nav label {
-  display: inline-block;
-  cursor: pointer;
-}
-
-/* Optional: hide full menu links on large screens */
-@media screen and (min-width: 601px) {
+/* Mobile behaviour */
+@media screen and (max-width: 600px) {
   .site-nav .trigger {
+    display: none;
+    flex-direction: column;
     position: absolute;
     background: #fff;
     right: 0;
     top: 100%;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     padding: 0.5rem 1rem;
+  }
+
+  .nav-trigger:checked + label + .trigger {
+    display: flex;
+  }
+
+  .site-nav .nav-trigger,
+  .site-nav label {
+    display: inline-block;
   }
 
   .site-nav .trigger a {
