--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
       <div class="trigger">
         {%- for page in site.pages -%}
           {%- if page.nav == true -%}
-            <a class="page-link" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
+            <a class="page-link" href="{{ page.url | relative_url }}">{{ page.nav_title | default: page.title | escape }}</a>
           {%- endif -%}
         {%- endfor -%}
       </div>
