--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,12 @@
 
 // customisations below
 
+.site-header .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 hr {
   margin-top: 30px;
   margin-bottom: 20px;
