--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,10 +17,9 @@
       </label>
 
       <div class="trigger">
-        {%- for page in site.pages -%}
-          {%- if page.nav == true -%}
-            <a class="page-link" href="{{ page.url | relative_url }}">{{ page.nav_title | default: page.title | escape }}</a>
-          {%- endif -%}
+        {%- assign nav_pages = site.pages | where: "nav", true | sort: "nav_order" -%}
+        {%- for page in nav_pages -%}
+          <a class="page-link" href="{{ page.url | relative_url }}">{{ page.nav_title | default: page.title | escape }}</a>
         {%- endfor -%}
       </div>
     </nav>
