--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,7 @@ layout: default
 
   {{ content }}
 
-    <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
-
+  <p class="rss-subscribe" style="margin-top: 2rem;">
+    subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a>
+  </p>
 </div>
