--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,11 +1,14 @@
 ---
 layout: default
 ---
+{%- comment -%}
 
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading">{{ page.title }}</h1>
   {%- endif -%}
+
+{%- endcomment -%}
 
   {{ content }}
 
