--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -51,6 +51,10 @@ h1 {
   justify-content: flex-end;
 }
 
+.page-link {
+  font-size: 0.9rem;
+}
+
 /* Always hide the checkbox input */
 .site-nav .nav-trigger {
   display: none;
