--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,11 @@ h1 {
   font-size: 1.8em;
 }
 
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media print {
   .no-print {
     display: none !important;
