--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -1,6 +1,8 @@
 {%- assign section = page.path | split: '/' | first -%}
-{%- assign siblings = site.pages | where_exp: "p", "p.order and p.path contains section" | sort: "order" -%}
-{%- assign index = siblings | index_of: page -%}
+{%- assign siblings = site.pages 
+  | where_exp: "p", "p.path contains section and p.order" 
+  | sort: "order" -%}
+{%- assign index = siblings | index: page -%}
 {%- assign prev = siblings[index | minus: 1] -%}
 {%- assign next = siblings[index | plus: 1] -%}
 
