--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -2,7 +2,13 @@
 {%- assign siblings = site.pages 
   | where_exp: "p", "p.path contains section and p.order" 
   | sort: "order" -%}
-{%- assign index = siblings | index: page -%}
+{%- assign current_index = 0 -%}
+{%- for p in siblings -%}
+  {%- if p.path == page.path -%}
+    {%- assign index = current_index -%}
+  {%- endif -%}
+  {%- assign current_index = current_index | plus: 1 -%}
+{%- endfor -%}
 {%- assign prev = siblings[index | minus: 1] -%}
 {%- assign next = siblings[index | plus: 1] -%}
 
