--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -1,16 +1,18 @@
 {%- assign section = page.path | split: '/' | first -%}
 {%- assign siblings = site.pages 
-  | where_exp: "p", "p.path contains section and p.order" 
+  | where_exp: "p", "p.path contains section and p.order"
   | sort: "order" -%}
-{%- assign current_index = 0 -%}
+
+{%- assign index = 0 -%}
 {%- for p in siblings -%}
-  {%- if p.path == page.path -%}
-    {%- assign index = current_index -%}
+  {%- if p.url == page.url -%}
+    {%- assign current_index = index -%}
   {%- endif -%}
-  {%- assign current_index = current_index | plus: 1 -%}
+  {%- assign index = index | plus: 1 -%}
 {%- endfor -%}
-{%- assign prev = siblings[index | minus: 1] -%}
-{%- assign next = siblings[index | plus: 1] -%}
+
+{%- assign prev = siblings[current_index | minus: 1] -%}
+{%- assign next = siblings[current_index | plus: 1] -%}
 
 <div class="post_navi">
   {% if prev %}
