--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -1,6 +1,7 @@
-{%- assign section = page.path | split: '/' | first -%}
+{%- assign path_parts = page.path | split: '/' -%}
+{%- assign section = path_parts[1] -%}
 {%- assign siblings = site.pages 
-  | where_exp: "p", "p.path contains section and p.order"
+  | where_exp: "p", "p.path contains '/#{section}/' and p.order"
   | sort: "order" -%}
 
 {%- assign index = 0 -%}
