--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -14,10 +14,12 @@
 {%- assign prev = nil -%}
 {%- assign next = nil -%}
 {%- if current_index != nil and current_index > 0 -%}
-  {%- assign prev = siblings[current_index | minus: 1] -%}
+  {%- assign prev_index = current_index | minus: 1 -%}
+  {%- assign prev = siblings[prev_index] -%}
 {%- endif -%}
 {%- if current_index != nil and current_index < siblings.size | minus: 1 -%}
-  {%- assign next = siblings[current_index | plus: 1] -%}
+  {%- assign next_index = current_index | plus: 1 -%}
+  {%- assign next = siblings[next_index] -%}
 {%- endif -%}
 
 <div class="post_navi">
