--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -41,7 +41,7 @@ h1 {
   padding: 0 1.5rem;
 }
 
-/* ** NAVIGATION MENU ** */
+/* ** MAIN NAVIGATION MENU ** */
 
 .site-nav {
   flex: 1;
@@ -101,6 +101,32 @@ h1 {
     margin: 0.5rem 0;
   }
 }
+
+/* CONTENT PAGE INTERNAL NAVIGATION */
+.content_navi {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.content_navi-item {
+  width: 45%;
+  text-decoration: none;
+}
+
+.content_navi-label {
+  font-size: 0.8em;
+  opacity: 0.5;
+}
+
+.nav_prev {
+  text-align: left;
+}
+
+.nav_next {
+  text-align: right;
+}
+
 
 /* IMAGE AND VIDEO */
 .image-grid {
@@ -193,48 +219,4 @@ h1 {
 .centre-ticks td:nth-child(3),
 .centre-ticks td[colspan="2"] {
   text-align: center;
-}
-
-
-
-
-/* Post navigation links - may be redundant now? */
-.post_navi {
-  display: flex;
-}
-
-.post_navi-label {
-  font-size: 0.8em;
-  opacity: 0.5;
-}
-
-.post_navi .post_navi-item {
-  padding: 0 2.2em;
-  width: 50%;
-  position: relative;
-  color: inherit !important;
-}
-
-.post_navi .nav_prev {
-  text-align: left;
-}
-
-.post_navi .nav_next {
-  text-align: right;
-}
-
-.post_navi .nav_prev .post_navi-arrow {
-  left: 0;
-}
-
-.post_navi .nav_next .post_navi-arrow {
-  right: 0;
-}
-
-.post_navi .post_navi-arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 2.5em;
-  opacity: 0.3;
 }
