--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,6 +34,21 @@ h1 {
   }
 }
 
+/* Logo */
+.logo-link img {
+  height: 40px;
+}
+
+.visually-hidden {
+  position: absolute;
+  left: -9999px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+
+
 /* Overall column width */
 .wrapper {
   max-width: 1100px;
