--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
     <a class="site-title logo-link" rel="author" href="{{ '/' | relative_url }}">
-      <img src="{{ '/assets/images/logo.svg' | relative_url }}" alt="{{ site.title }}">
+      <img src="{{ '/assets/images/logoOptionC.png' | relative_url }}" alt="{{ site.title }}">
       <span class="visually-hidden">{{ site.title }}</span>
     </a>
 
