--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,7 +20,10 @@ hr {
 
 /* Typography */
 h1 {
-  font-size: 1.8em;
+  font-size: 1.8rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  font-weight: 600;
 }
 
 .responsive-img {
