--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,7 +23,8 @@ h1 {
   font-size: 1.8rem;
   margin-top: 1.5rem;
   margin-bottom: 1rem;
-  font-weight: 600;
+  font-weight: 300;
+  color: #204312;
 }
 
 .responsive-img {
