--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   <meta property="og:url" content="https://sustainamo.com/">
   <meta property="og:type" content="website">
 
+  <link rel="stylesheet" href="https://use.typekit.net/ope1aws.css">
+
   <!-- Begin SEO -->
   {%- seo -%}
   <!-- End SEO -->
