--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,6 +27,12 @@ h1 {
   color: #204312;
 }
 
+.sustainamo-script {
+  font-family: "alkaline", sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
 .responsive-img {
   max-width: 100%;
   height: auto;
