--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -31,6 +31,7 @@ h1 {
   font-family: "alkaline", sans-serif;
   font-weight: normal;
   font-style: normal;
+  font-size: 1.1rem;
 }
 
 .responsive-img {
