--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -233,6 +233,10 @@ h1 {
   text-decoration: underline;
 }
 
+.breadcrumb-separator {
+  margin: 0 0.4rem;
+  color: #aaa;
+}
 
 /* RESPONSIVE TABLE */
 .responsive-table {
